ieo detail new adaptive

--- a/src/app/ieo/components/ieo-description-wrapper/components/ieo-description2/ieo-description2.component.html
+++ b/src/app/ieo/components/ieo-description-wrapper/components/ieo-description2/ieo-description2.component.html
@@ -143,7 +143,7 @@
 							<div class="table-item-description">
 								<p>Token Contract Address</p>
 							</div>
-							<div class="table-item-value">
+							<div class="table-item-value hash">
 								<p>0x5FaA6eB66Ed24b9C331634B0B12D28575B8fAbd9</p>
 							</div>
 						</div>
