--- a/src/assets/scss/pages/ieo/_economic.scss
+++ b/src/assets/scss/pages/ieo/_economic.scss
@@ -12,7 +12,11 @@
 			font-size: .7em;
 			line-height: 2;
 			color: #000000;
-			    margin-bottom: 4em;
+			margin-bottom: 4em;
+			@media(max-width: 992px){
+				text-align: center;
+				font-size: .85em;
+			}
 		}
 	}
 	.economics-table{
@@ -63,13 +67,21 @@
 		}
 	}
 	.table-item-value{
+		padding: .67em 1em .68em 2em;
+		@media(max-width: 992px){
+			padding: .67em 1em .68em 1em;
+		}
 		flex-grow: 1;
 		max-width: calc(100% - 19.7em);
+		&.hash{
+			p{
+				word-wrap: wrap;
+			}
+		}
 		@media (max-width: 992px) {
 			width: 30em;
 			max-width: unset;
 		}
-		padding: .67em 1em .68em 2em;
 		p{
 
 		}
