fix texts in ieo general

--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -8,7 +8,7 @@
         <h2>{{'Exrates X-Platform' | translate}}</h2>
       </div>
       <div class="description-wr">
-        <p>{{'A Token X-platform for transformative projects' | translate}}</p>
+        <p>{{'IEO platform for transformative projects' | translate}}</p>
       </div>
       <div class="button-wr">
         <a href="https://forms.gle/Y18qX3Na3WmWiRnw9" class="standart-btn" target="blank"><span>{{'Apply project to X-Platform' | translate}}</span></a>
@@ -66,7 +66,7 @@
             </svg>
           </div>
           <div class="description-wr">
-            <p>{{'Notify me about upcoming projects in email' | translate}}</p>
+            <p>{{'Notify me about upcoming projects by email' | translate}}</p>
           </div>
         </div>
 
@@ -82,7 +82,7 @@
               formControlName="email"
               required=""
               type="text">
-            <label class="wrap-input__label" for="">{{'Enter your mail' | translate}}</label>
+            <label class="wrap-input__label" for="">{{'Enter your email' | translate}}</label>
             <div class="input-hint-wrapper">
               <div *ngIf="!emailControl.valid && emailControl.touched && isSubmited">
                 <span
@@ -115,7 +115,7 @@
             </div>
           </div>
           <div class="button-wr">
-            <button class="standart-btn reverse" (click)="subEmailNotification()"><span>{{'Get mail notification' | translate}}</span>
+            <button class="standart-btn reverse" (click)="subEmailNotification()"><span>{{'Get email notification' | translate}}</span>
             </button>
           </div>
         </form>
@@ -172,7 +172,7 @@
               </svg>
             </div>
             <div class="description-wr">
-              <p>{{'Notify me about upcoming projects in email' | translate}}</p>
+              <p>{{'Notify me about upcoming projects by email' | translate}}</p>
             </div>
           </div>
           <div class="bottom-part">
@@ -189,7 +189,7 @@
                     formControlName="email"
                     required=""
                     type="text">
-                  <label class="wrap-input__label" for="">{{'Enter your mail' | translate}}</label>
+                  <label class="wrap-input__label" for="">{{'Enter your email' | translate}}</label>
                   <div class="input-hint-wrapper">
                     <div *ngIf="!emailControl.valid && emailControl.touched && isSubmited">
                       <span
@@ -223,7 +223,7 @@
                 </div>
                 <div class="button-wr">
                   <button class="standart-btn reverse" (click)="subEmailNotification()">
-                    <span>{{'Get mail notification' | translate}}</span>
+                    <span>{{'Get email notification' | translate}}</span>
                   </button>
                 </div>
               </form>
@@ -324,7 +324,7 @@
   <div class="how-work">
     <div class="how-work-wr">
       <div class="title-wr">
-        <h3>{{'How it work?' | translate}}</h3>
+        <h3>{{'How does it work?' | translate}}</h3>
       </div>
       <div class="how-work-item-wr">
         <div class="how-work-item">
@@ -335,7 +335,7 @@
             <h4>{{'Verify account' | translate}}</h4>
           </div>
           <div class="h-w-description">
-            <p>{{'Only verified accounts can access to IEO. Verification is needed only one time.' | translate}}</p>
+            <p>{{'Only verified accounts can participate in IEO. You need to pass verification only once.' | translate}}</p>
           </div>
         </div>
         <div class="how-work-item">
