--- a/src/app/ieo/components/get-ready-banner/get-ready-banner.component.html
+++ b/src/app/ieo/components/get-ready-banner/get-ready-banner.component.html
@@ -8,7 +8,7 @@
         <h4>{{'Get ready for launch' | translate}}</h4>
       </div>
       <div class="kyc-description">
-        <p>{{'Verify your account id participate' | translate}}</p>
+        <p>{{'Verify your account to participate' | translate}}</p>
       </div>
       <div class="button-wr">
         <button class="standart-btn" (click)="onClick.emit()">
