fix policy popup text

--- a/src/assets/scss/pages/ieo/_ieo-policy.scss
+++ b/src/assets/scss/pages/ieo/_ieo-policy.scss
@@ -11,6 +11,8 @@
 			overflow: auto;
 			background-color: #191A39;
 			justify-content: flex-start;
+			max-width: unset;
+			max-height: unset;
 		}
 	}
 	.popup__title{
