--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -53,9 +53,9 @@
         </div>
 
         <div class="wrap-input send__wrap-input"
-             [ngClass]="{'wrap-input--error': form.get('amount').invalid
-                          && (form.get('amount').touched || isSubmited)}"
-             *ngIf="cryptoInfoByName && cryptoInfoByName.merchantCurrencyData.length">
+             [ngClass]="{
+                'wrap-input--error': form.get('amount').invalid&& (form.get('amount').touched || isSubmited),
+                'd-none': !(cryptoInfoByName && cryptoInfoByName.merchantCurrencyData.length)}">
           <div class="avaliable">{{'Available:' | translate}}
             <a (click)="balanceClick()" class="link" [ngStyle]="{'pointer-events': loadingBalance ? 'none' : 'auto'}">
               {{activeBalance | roundCurrency: currName | formatCurrency: 'short': currName}} {{currName}}
@@ -66,18 +66,17 @@
             [currencyName]="activeCrypto.name"
             (customInput)="amountInput($event)"
             (customBlur)="amountBlur($event)"
-            name="amount" formControlName="amount"
-          >
+            name="amount" formControlName="amount">
           </app-price-input>
 
           <span class="bottom-tooltip wrap-input__message--show"
                 *ngIf="form.controls['amount'].errors && !form.controls['amount'].errors['isMinThenMinWithdraw']">
             {{
-              'Minimum sum for withdrawal' | translate
+            'Minimum sum for withdrawal' | translate
             }} {{
-              minWithdrawSum  | roundCurrency: currName | formatCurrency: 'short': currName
+            minWithdrawSum  | roundCurrency: currName | formatCurrency: 'short': currName
             }} {{
-              currName
+            currName
             }}
           </span>
 
