--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,8 @@
 <!-- HEADER START-->
-<header class="header" *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
+<header
+  class="header"
+  [ngClass]="{'transparent-header': isAdvisor}"
+  *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
   <div class="header__inner">
     <div class="logo">
       <a class="logo__link" href="/">
