--- a/src/app/advisor/advisor.component.html
+++ b/src/app/advisor/advisor.component.html
@@ -1,3 +1,17 @@
-<p>
-  advisor works!
-</p>
+<div class="advisor-page">
+	<div class="advisor--inner">
+		<div class="advisor-fs">
+			<!-- <div class="fs-image-container">
+				<img src="assets/img/advisor-page.png" alt="">
+			</div> -->
+			<div class="fs-wr">
+				<div class="title-wr">
+					<h2>Стань официальнным Едвайзером Екратес</h2>
+				</div>
+				<div class="button-wr">
+					<a href="#" class="standart-btn" target="blank"><span>Подать заявку на Едвайзера</span></a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
