--- a/src/app/advisor/advisor.component.html
+++ b/src/app/advisor/advisor.component.html
@@ -1,9 +1,9 @@
 <div class="advisor-page">
 	<div class="advisor--inner">
 		<div class="advisor-fs">
-			<!-- <div class="fs-image-container">
+			<div class="fs-image-container">
 				<img src="assets/img/advisor-page.png" alt="">
-			</div> -->
+			</div>
 			<div class="fs-wr">
 				<div class="title-wr">
 					<h2>Стань официальнным Едвайзером Екратес</h2>
