--- a/src/assets/scss/pages/_advisor.scss
+++ b/src/assets/scss/pages/_advisor.scss
@@ -21,7 +21,7 @@ header.header.transparent-header{
 		position: relative;
 	}
 	.advisor-fs{
-		position: relative;
+		// position: relative;
 	}
 	.fs-image-container{
 		position: absolute;
@@ -31,17 +31,17 @@ header.header.transparent-header{
 		right: 0;
 		left: 0;
 		width: 100%;
+		@media(max-width: 992px){
+			top: 0;
+		}
 		img{
 			width: 100%;
 			@media(max-width: 992px){
-				// height: 100%;
-				min-height: unset;
 				position: absolute;
-				top: -100%;
-				bottom: -100%;
 				right: -100%;
 				left: -100%;
 				margin: auto;
+				width: 200%;
 			}
 		}
 	}
@@ -49,7 +49,7 @@ header.header.transparent-header{
 
 	.fs-wr{
 		position: relative;
-		padding: 5.3em 16px 4.8em;
+		padding: 4.3em 16px 4.8em;
 		.standart-btn{
 			span{
 
@@ -58,14 +58,18 @@ header.header.transparent-header{
 		.title-wr{
 			margin: 0 auto;
 			width: 100%;
-			margin-bottom: 2em;
+			margin-bottom: 1.6em;
 
 			h2{
+				text-align: center;
 				font-weight: 400;
-				font-size: 1.6em;
+				font-size: 2.4em;
 				line-height: 1.3;
 				color: #FFFFFF;
-				text-align: center;
+				@media(max-width: 992px){
+					font-size: 1.6em;
+				}
+
 			}
 		}
 	}
@@ -88,7 +92,7 @@ header.header.transparent-header{
 		}
 	}
 	.button-wr{
-		max-width: 14.9em;
+		max-width: 20.8em;
 		margin: 0 auto;
 		@media(max-width: 992px){
 			font-size: .7em;
@@ -98,9 +102,154 @@ header.header.transparent-header{
 			@media(max-width: 992px){
 				font-size: inherit;
 			}
-			padding: 18px .7em;
+			padding: 25px .7em;
 			span{
-				font-size: 1em;
+			}
+		}
+	}
+	.how-get{
+		position: relative;
+		max-width: 1370px;
+		margin: 0 auto;
+		padding: 1.2em 15px 3.05em;
+		.title{
+			margin-bottom: 2.15em;
+			font-size: inherit;
+			h4{
+				text-align: center;
+				font-weight: 500;
+				font-size: 1.2em;
+				line-height: 1.2;
+				color: #FFFFFF;
+				text-shadow: 0px 4px 55px rgba(0, 0, 0, 0.73);
+			}
+		}
+		.how-get-item-wr{
+			display: flex;
+			flex-wrap: wrap;
+		}
+		.how-get-item{
+			border: 1px solid #525378;
+			padding: .55em 1.5em;
+			width: 25%;
+			margin-left: -1px;
+			margin-top: -1px;
+			min-height: 8.1em;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			transition: .3s;
+			&:hover{
+				background: #1F2035;
+				border: 1px solid #237BEF;
+				box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.41);
+				.head-item{
+					max-height: 4em;
+					padding-bottom: .6em;
+				}
+				.description-item{
+					max-height: 5em;
+					opacity: 1;
+				}
+			}
+			@media(max-width: 1420px){
+				padding: .55em;
+				br{
+					display: none;
+				}
+			}
+			@media(max-width: 992px){
+				width: 50%;
+				font-size: 1.2em;
+			}
+			@media(max-width: 568px){
+				width: 100%;
+			}
+		}
+		.head-item{
+			max-height: 1em;
+			display: flex;
+			transition: .27s;
+			h5{
+				font-weight: 500;
+				font-size: .9em;
+				line-height: 1.15;
+				text-align: center;
+				color: #9A9BB2;
+				@media(max-width: 992px){
+					max-width: 22em;
+				}
+			}
+		}
+		.description-item{
+			// display: none;
+			max-height: 0;
+			transition: .3s;
+			overflow: hidden;
+			opacity: 0;
+			p{
+				font-weight: 400;
+				font-size: .75em;
+				line-height: 1.15;
+				text-align: center;
+				color: #9A9BB2;
+			}
+		}
+	}
+	.exchange-info{
+		position: relative;
+		max-width: 1370px;
+		margin: 0 auto;
+		padding: 0 15px;
+		.exchange-item-wr{
+			display: flex;
+			flex-wrap: wrap;
+			.exchange-item{
+				width: 25%;
+				&:not(:last-child){
+					border-right: 1px solid #525378;
+				}
+				@media(max-width: 992px){
+					width: 50%;
+					margin-bottom: 2em;
+					&:nth-child(odd){
+						border-right: 1px solid #525378;
+					}
+					&:nth-child(even){
+						border-right: none;
+					}
+				}
+				@media(max-width: 568px){
+					width: 100%;
+					&:nth-child(odd){
+						border-right: none;
+					}
+					&:last-child{
+						margin-bottom: 0;
+					}
+				}
+			}
+			.title{
+				font-size: inherit;
+				margin-bottom: .6em;
+				p{
+					font-weight: 400;
+					font-size: .9em;
+					line-height: 1.15;
+					text-align: center;
+					color: #FFFFFF;
+				}
+			}
+			.value{
+				span{
+					font-weight: 500;
+					font-size: 1.8em;
+					line-height: 1.27;
+					text-align: center;
+					color: #237BEF;
+					display: block;
+				}
 			}
 		}
 	}
