--- a/src/app/advisor/advisor.component.html
+++ b/src/app/advisor/advisor.component.html
@@ -18,7 +18,7 @@
 				<h4>Benefits of becoming our advisor</h4>
 			</div>
 			<div class="how-get-item-wr">
-				<div class="how-get-item">
+				<div class="how-get-item hover">
 					<div class="head-item">
 						<h5>Get commission and bonuses for every client you involved</h5>
 					</div>
@@ -30,57 +30,43 @@
 					<div class="head-item">
 						<h5>Your personal page on Exchange website</h5>
 					</div>
-					<div class="description-item">
-						<p>Special reward system for advisors: get <br>from  5% to 15%</p>
-					</div>
+					
 				</div>
 				<div class="how-get-item">
 					<div class="head-item">
 						<h5>Attend conferences and events as a part of Exrates team</h5>
 					</div>
-					<div class="description-item">
-						<p>Special reward system for advisors: get <br>from  5% to 15%</p>
-					</div>
+					
 				</div>
 				<div class="how-get-item">
 					<div class="head-item">
 						<h5>Get exclusive analytical market reports</h5>
 					</div>
-					<div class="description-item">
-						<p>Special reward system for advisors: get <br>from  5% to 15%</p>
-					</div>
+					
 				</div>
 				<div class="how-get-item">
 					<div class="head-item">
 						<h5>Your personal manager</h5>
 					</div>
-					<div class="description-item">
-						<p>Special reward system for advisors: get <br>from  5% to 15%</p>
-					</div>
+					
 				</div>
 				<div class="how-get-item">
 					<div class="head-item">
 						<h5>An opportunity to become a <br>part of international community</h5>
 					</div>
-					<div class="description-item">
-						<p>Special reward system for advisors: get <br>from  5% to 15%</p>
-					</div>
+					
 				</div>
 				<div class="how-get-item">
 					<div class="head-item">
 						<h5>Participation in online trainings and webinars</h5>
 					</div>
-					<div class="description-item">
-						<p>Special reward system for advisors: get <br>from  5% to 15%</p>
-					</div>
+					
 				</div>
 				<div class="how-get-item">
 					<div class="head-item">
 						<h5>Referral program</h5>
 					</div>
-					<div class="description-item">
-						<p>Special reward system for advisors: get <br>from  5% to 15%</p>
-					</div>
+					
 				</div>
 
 			</div>
@@ -108,7 +94,7 @@
 						<p>Fiat deposits and withdrawals</p>
 					</div>
 					<div class="value">
-						<span>34 currencies</span>
+						<span>35 currencies</span>
 					</div>
 				</div>
 				<div class="exchange-item">
@@ -116,7 +102,7 @@
 						<p>Active traders</p>
 					</div>
 					<div class="value">
-						<span>50 000 +</span>
+						<span>140 000 +</span>
 					</div>
 				</div>
 
