--- a/src/app/fiat/fiat.component.html
+++ b/src/app/fiat/fiat.component.html
@@ -39,10 +39,10 @@
 				</div>
 				<div class="benefits-item">
 					<div class="title-part">
-						<h3>Secure payments</h3>
+						<h3>Payment solution powered by</h3>
 					</div>
 					<div class="description-part">
-						<p>Payment solution powered by Singapore bank with the same license as PayPal & Apple Pay.</p>
+						<p>Singaporian bank with the same license as PayPal & Apple Pay.</p>
 					</div>			
 				</div>
 				<div class="benefits-item pg-small">
@@ -122,10 +122,10 @@
 		<div class="add-info">
 			<div class="add-info-wr">
 				<div class="left-part">
-					<p>Account in FUG.SG is your personal account which you can use for instant fiat transfers to your Exrates trading account.</p>
+					<p>This is your personal account which you can use for instant fiat transfers to your Exrates trading account.</p>
 				</div>
 				<div class="right-part">
-					<p>A more detailed description of the conditions is available on our financial partner page - <a href="#">FUG.SG</a>.</p>
+					<p>A more detailed description of the conditions is available on our financial partner page - <a href="#">FUG</a>.</p>
 				</div>
 			</div>
 		</div>
