--- a/src/assets/scss/pages/fiat/_fiat-fs.scss
+++ b/src/assets/scss/pages/fiat/_fiat-fs.scss
@@ -52,8 +52,12 @@
 		.title-wr{
 			margin: 0 auto;
 			width: 100%;
+			@media(max-width: 620px){
+				margin-bottom: 1em;
+			}
 			h2{
 				font-weight: 500;
+				
 			}
 		}
 	}
@@ -62,6 +66,7 @@
 		width: calc(50% - .4em);
 		@media (max-width: 620px) {
 			width: 100%;
+
 		}
 		h2{
 			font-weight: 400;
@@ -69,6 +74,9 @@
 			line-height: 1.3;
 			color: #FFFFFF;
 			text-align: center;
+			@media(max-width: 620px){
+				font-size: 1.3em;
+			}
 		}
 	}
 	.description-wr{
@@ -79,6 +87,9 @@
 			font-size: 1.6em;
 			line-height: 1.2;
 			color: #fff;
+			@media(max-width: 620px){
+				font-size: 1.3em;
+			}
 
 		}
 	}
@@ -162,10 +173,13 @@
 		.benefits-item{
 			width: 33.333%;
 			padding: 2em 1.25em;
-			min-height: 8em;
+			min-height: 7.9em;
 			border: 1px solid #1D365A;
 			margin-left: -1px;
 			margin-top: -1px;
+			padding-right: 0;
+			padding-bottom: 1em;
+
 			@media(max-width: 992px){
 				width: 50%;
 				
@@ -176,8 +190,8 @@
 				padding: 0;
 				min-height: auto;
 				border: none;
-				margin: 0 auto 2em;
-				max-width: 15em;
+				margin: 0 auto 1.6em;
+				max-width: 14em;
 				&.pg-small{
 					padding: 0;
 				}
@@ -185,6 +199,9 @@
 			}
 			&.pg-small{
 				padding: 1.1em 1.25em;
+				@media(max-width: 520px){
+					padding: 0;
+				}
 			}
 			.title-part{
 				margin-bottom: .9em;
@@ -193,11 +210,14 @@
 					font-size: 1.2em;
 					line-height: .95;
 					color: #237BEF;
+					@media(max-width: 520px){
+						line-height: 1.15;
+					}
 				}
 			}
 			.description-part{
 				p{
-					max-width: 18em;
+					max-width: 19.2em;
 					font-weight: 500;
 					font-size: .75em;
 					line-height: 1.2;
@@ -225,10 +245,11 @@
 			@media(max-width: 520px){
 				width: 100%;
 				text-align: center;
+				margin-top: 1em;
 				
 			}
 			.title-part{
-				margin-bottom: 1.55em;
+				margin-bottom: .65em;
 				h3{
 					font-weight: 500;
 					font-size: 1.2em;
