--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-mobile.component.html
@@ -27,6 +27,7 @@
 
   <app-embedded-orders-history-mobile
     *ngIf="mainTab === 'history'"
+    [isVipUser]="isVipUser"
     [historyOrders]="historyOrders"
     [currentPair]="activeCurrencyPair">
   </app-embedded-orders-history-mobile>
