--- a/src/app/dashboard/components/embedded-orders/embedded-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders.component.html
@@ -92,6 +92,7 @@
 
     <app-embedded-orders-history
       *ngIf="mainTab === 'history'"
+      [isVipUser]="isVipUser"
       [makeHeight]="makeHeight"
       [historyOrders]="historyOrders"
       [currentPair]="activeCurrencyPair">
