--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -195,7 +195,7 @@
         <div class="login-menu__submenu">
           <div class="login-menu__submenu-item">
             <div class="item-title">{{'Account' | translate}}</div>
-            <span>{{ getUsername() }}</span>
+            <span>{{ (this.userInfo$ | async).username }}</span>
           </div>
           <div class="login-menu__submenu-item">
             <div class="item-title">{{'Estimated Holdings' | translate}}</div>
