--- a/src/app/funds/balance/send-money/send-money.component.html
+++ b/src/app/funds/balance/send-money/send-money.component.html
@@ -88,10 +88,9 @@
       ></app-send-step-three>
 
       <app-send-successful
-        *ngIf="step === 4"
+        *ngIf="true"
         [data]="stepFourData"
         (closeMe)="onCloseSendMoneyPopup()"
-        (toggleBalanceTab)="toggleBalanceTab.emit($event)"
       ></app-send-successful>
 
     </div>
