--- a/src/app/funds/balance/send-money/send-money.component.html
+++ b/src/app/funds/balance/send-money/send-money.component.html
@@ -88,7 +88,7 @@
       ></app-send-step-three>
 
       <app-send-successful
-        *ngIf="true"
+        *ngIf="step === 4"
         [data]="stepFourData"
         (closeMe)="onCloseSendMoneyPopup()"
       ></app-send-successful>
