--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -236,7 +236,7 @@
 
 
   <app-get-ready-banner
-    *ngIf="verificationStatus !== KYC_STATUS.SUCCESS"
+    *ngIf="verificationStatus.toUpperCase() !== KYC_STATUS.SUCCESS"
     (onClick)="bannerClick()"
   ></app-get-ready-banner>
 
