--- a/src/app/shared/components/popup-wait-ieo/popup-wait-ieo.component.html
+++ b/src/app/shared/components/popup-wait-ieo/popup-wait-ieo.component.html
@@ -1,11 +1,8 @@
-<div class="overlay ieo-loading">
-
-  <div class="loading-popup">
+<div class="overlay loading-popup">
+  <div class="popup">
     <div class="loader">
       <app-loader></app-loader>
     </div>
-    <div class="description">
-      {{'Your purchase request has been places into a queue. Please wait' | translate}}
-    </div>
+    <h4 class="popup__subtitle tnx-description">{{'Your purchase request has been places into a queue. Please wait' | translate}}</h4>
   </div>
 </div>
