--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -78,7 +78,7 @@
 @import "pages/partner-news/_partner-news.scss";
 @import "pages/ieo/_common-ieo.scss";
 @import "pages/ieo/_kyc-banner.scss";
-@import "pages/ieo/_wait-popup.scss";
+@import "pages/ieo/_ieo-test-popup.scss";
 
 
 //fiat
