--- a/src/app/funds/balance/ieotable/ieotable.component.html
+++ b/src/app/funds/balance/ieotable/ieotable.component.html
@@ -115,3 +115,12 @@
   [IEOName]="selectedIEO.currencyDescription"
   (close)="closeSuccessIEO()"
 ></app-popup-success>
+
+
+<app-popup-wait-ieo *ngIf="showWait"></app-popup-wait-ieo>
+
+<app-popup-sorry-ieo
+  *ngIf="showSorry"
+  (close)="toggleSorry(false)"
+>
+</app-popup-sorry-ieo>
