--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,130 +1,299 @@
-@import '../../assets/scss/variables';
-.footer {
-  position: relative;
-  z-index: 50;
-  display: none;
-  background-color: $dark-indigo;
-  @media (min-width:1200px) {
-    display: block;
-    flex-grow: 0;
-    height: 98px;
-    background-color: #24253F;
-  }
-}
 
-.footer__inner {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 1400px;
-  height: 100%;
-  margin: 0 auto;
-  padding: 20px 16px;
-  @media (min-width:1200px) {
-    padding: 0 20px;
-  }
-}
+.footer{
+  background-color: #0F1032;
 
-.footer__inner-top {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  flex-direction: column;
-  @media (min-width:1200px) {
-    flex-direction: row;
-    // justify-content: space-between;
-  }
-}
+  .footer-inner{
 
-.footer__menu {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  margin-bottom: 8px;
-  flex-wrap: wrap;
-  @media (min-width:600px) {
-    margin-bottom: 20px;
   }
-    @media (min-width:1260px) {
-    margin-bottom: 0;
-    margin-right: 80px;
+  a{
+    text-decoration: none;
+    &:hover,&:focus,&:active{
+      text-docoration: none;
+    }
+    &:hover{
+      color: #fff;
+    }
   }
-  @media (min-width:1200px) and (max-width: 1259px){
-    margin-bottom: 0;
-    margin-right: 30px;
-  }
-}
+  .top-part{
+    display: flex;
+    justify-content: space-between;
+    padding:1rem 2.7rem 2.3rem;
+    border-bottom: 1px solid #252543;
+    max-width: 1490px;
+    margin: auto;
+    @media(max-width: 1200px){
+      padding:1rem 15px 2.3rem;
+    }
+    @media(max-width: 992px){
+      /* flex-direction: column; */
+      flex-wrap: wrap;
+      font-size: 1.2rem;
 
+    }
+    @media(max-width: 520px){
+      flex-direction: column;
+      text-align: center;
+      font-size: 1.55rem;
+      padding: 1rem 15px 1.4rem;
 
-.footer__menu-item {
-  margin-right: 32px;
-  margin-bottom: 12px;
-  @media (min-width:1200px) {
-    margin-bottom: 0;
+    }
+    .social-wr{
+      @media(max-width: 992px){
+        width: 25%;
+
+      }
+      @media(max-width: 520px){
+        width: auto;
+      }
+    }
+    .social-item{
+      &:hover{
+        .social-txt{
+          span{
+
+            color: #fff;
+          }
+        }
+        .icon{
+          path{
+            fill: #fff;
+          }
+        }
+      }
+
+      a{
+        display: flex;
+        @media(max-width: 520px){
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          margin-bottom: .6rem;
+        }
+
+      }
+      .icon{
+        height: .75rem;
+        margin-top: .2rem;
+        margin-right: .5rem;
+        width: .9rem;
+        @media(max-width: 520px){
+          margin-right: 0;
+          width: auto;
+          margin-bottom: .5rem;
+        }
+        svg{
+          display: block;
+          height: 100%;
+          path{
+            transition: .3s;
+          }
+        }
+      }
+      .social-txt{
+        display: flex;
+        flex-direction: column;
+        span{
+          font-weight: 400;
+          font-size: .65rem;
+          line-height: 1.72;
+          color: #7E849A;
+          transition: .3s;
+
+        }
+        .social-name{
+
+        }
+        .social-followers{
+
+        }
+      }
+    }
+    .servise-page-wr{
+      @media(max-width: 992px){
+        width: 25%;
+
+      }
+      @media(max-width: 520px){
+        width: auto;
+      }
+    }
+    .servise-page-item{
+      a{
+        &:hover{
+          span{
+            color: #fff;
+            text-decoration-color: #fff;
+          }
+
+        }
+      }
+      span{
+        font-weight: 400;
+        font-size: .75rem;
+        line-height: 1.72;
+        color: #7E849A;
+        transition: .3s;
+        text-decoration: underline;
+        text-decoration-color: transparent;
+      }
+    }
+
+    .info-page-wr{
+      @media(max-width: 992px){
+        width: 13%;
+
+      }
+      @media(max-width: 520px){
+        width: auto;
+      }
+    }
+    .info-page-item{
+      a{
+        &:hover{
+          span{
+            color: #fff;
+            text-decoration-color: #fff;
+          }
+
+        }
+      }
+      span{
+        font-weight: 400;
+        font-size: .75rem;
+        line-height: 1.72;
+        color: #7E849A;
+        transition: .3s;
+        text-decoration: underline;
+        text-decoration-color: transparent;
+      }
+    }
+    .inside-page-wr{
+
+    }
+    .inside-page-item{
+      a{
+        &:hover{
+          span{
+            color: #fff;
+            text-decoration-color: #fff;
+          }
+
+        }
+      }
+      span{
+        font-weight: 400;
+        font-size: .75rem;
+        line-height: 1.72;
+        color: #7E849A;
+        transition: .3s;
+        text-decoration: underline;
+        text-decoration-color: transparent;
+      }
+    }
+    .adrr-block{
+      max-width: 18.5rem;
+      display: flex;
+      @media(max-width: 992px){
+        margin: 1rem auto 0;
+
+      }
+      @media(max-width: 520px){
+        flex-direction: column;
+        align-items: center;
+
+      }
+
+      .pic{
+        width: 5.5rem;
+        img{
+          width: 100%;
+        }
+      }
+      .adrr-txt{
+        width: calc(100% - 5.5rem);
+        @media(max-width: 460px){
+          width: auto;
+        }
+        h4{
+          font-weight: 500;
+          font-size: .9rem;
+          line-height: 1.72;
+          color: #FFFFFF;
+        }
+        p{
+          font-weight: 400;
+          font-size: .6rem;
+          line-height: 1.26;
+          color: #7E849A;
+        }
+      }
+    }
+  }
+  .bottom-part{
+    padding: 1.4rem 2.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1490px;
+    margin: auto;
+    @media(max-width: 1200px){
+      padding: 1.4rem 15px;
+    }
+    @media(max-width: 992px){
+      font-size: 1.2rem;
+      align-items: flex-start;
+    }
+    @media(max-width: 460px){
+      font-size: 1.4rem;
+      flex-direction: column-reverse;
+      text-align: center;
+      flex-wrap: wrap;
+
+    }
+    .copy{
+      p{
+        font-weight: 400;
+        font-size: .65rem;
+        line-height: 1.72;
+        color: #7E849A;
+      }
+    }
+    .bottom-social-wr{
+      display: flex;
+      @media(max-width: 992px){
+        margin-top: .2rem;
+        font-size: 1.1rem;
+        margin-left: 1rem;
+      }
+      @media(max-width: 460px){
+        margin: 0 auto 1rem;
+      }
+    }
+    .bottom-social-item{
+
+      a{
+        height: .9rem;
+        margin-left: .55rem;
+        display: block;
+        cursor: pointer;
+        &:hover{
+          path{
+            fill: #fff;
+          }
+        }
+        &.fb{
+          margin-left: .3rem;
+        }
+      }
+      svg{
+        height: 100%;
+        display: block;
+        width: auto;
+      }
+      path{
+        transition: .3s;
+      }
+    }
   }
 
-  &:last-child {
-    margin-right: 0;
-  }
-}
-
-.footer__menu-link {
-  color: #fff;
-  font-size: 12px;
-  line-height: 22px;
-  text-decoration: none;
-
-  &:hover {
-    color: #fff;
-    text-decoration: underline;
-  }
-}
-
-.footer__copy {
-  color: #d6d6d6;
-  font-size: 12px;
-  line-height: 22px;
-}
-
-.footer__app-wrap {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 28px;
-  @media (min-width:600px) {
-    margin-bottom: 36px;
-    flex-direction: row;
-  }
-  @media (min-width:1200px) {
-    margin-bottom: 0;
-  }
-}
-
-.footer__app-title {
-  margin-right: 32px;
-  color: #fff;
-  font-size: 12px;
-  line-height: 18px;
-  align-self: flex-start;
-  margin-bottom: 16px;
-  @media (min-width:600px) {
-    margin-bottom: 0;
-  }
-}
-
-.footer__app-link {
-  display: inline-block;
-  margin-right: 32px;
-  height: 32px;
-  img{
-    width: 100%;
-    height: 100%;
-  }
-
-  &:last-child {
-    margin-right: 0;
-  }
 }
